se agrego archivos para un pagina

--- a/proyecto/html/dos.html
+++ b/proyecto/html/dos.html
@@ -52,9 +52,9 @@
 					<p align="center"><b>Computacion Basica</b></p>
 				<h2>intecap</h2>
 					<p align="center"><b>Excel 2016</b></p>
-          <p align="center"><b>Tecnicas Pra Prender<br> Ingles en Linea</b></p>
+          <p align="center"><b>Tecnicas para aprender Ingles</b></p>
           <h2>Diplomados</h2>
 					<p align="center"><b>Reparacion y Mantenimiento de computadoras</b></p>
-					<p align="center"><b>Dibujo Grafico</b></p>
+				
 </body>
 </html>
